infra/k8s/backend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gh-sentry-app
  template:
    metadata:
      labels:
        app: gh-sentry-app
    spec:
      containers:
        - name: backend
          image: github-sentry-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5200
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: gh-sentry-app
  ports:
    - port: 5200
      targetPort: 5200
