infra/k8s/frontend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gh-sentry-app
  template:
    metadata:
      labels:
        app: gh-sentry-app
    spec:
      containers:
        - name: frontend
          image: github-sentry-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: gh-sentry-app
  ports:
    - port: 80
      targetPort: 80
